Assets/style.css
body,
html {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  font-family: "Nunito", sans-serif;
}

.menu {
  display: block;
  background-color: #222831;
  position: fixed;
  width: 100%;
  z-index: 99;
}

#menu-center {
  width: 100%;
  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.12);
  margin: 0 auto;
  float: right;
  padding: 15px;
}
#menu-center ul {
  display: inline-flex;
  margin: 15px 100px;
  float: right;
}
#menu-center ul li {
  list-style: none;
  margin: 0px 30px;
  color: #eeeeee;
  cursor: pointer;
}
#menu-center ul li a.active {
  color: #eee;
  text-decoration: none;
  border-bottom: 3px solid #00adb5;
}
#menu-center ul li a {
  display: inline-block;
  text-decoration: none;
  margin: 0;
  padding: 0;
  color: #eeeeee;
  font-size: 19px;
}
#home {
  background-color: #222831;
  height: 100%;
  width: 100%;
  overflow: hidden;
}

.app-text {
  width: 40%;
  height: 70%;
  top: 30%;
  left: 130px;
  position: absolute;
  /* border: 1px red solid; */
}

.app-text #me {
  font-size: 35px;
  color: #eee;
  font-weight: normal;
  /* border: 1px solid red; */
  margin-bottom: 0px;
}

.app-text h1 {
  color: #00adb5;
  font-size: 50px;
  margin-top: 0px;
  /* border: 1px solid red; */
}

.app-text #young {
  color: #eee;
  margin-top: 15px;
  font-size: 35px;
  /* border: 1px red solid; */
}

.app-text #young span {
  color: #00adb5;
}

.app-picture {
  width: 60%;
  float: right;
}

.app-picture img {
  width: 50%;
  /* border: 1px red solid; */
  margin-top: 250px;
  padding-left: 410px;
}

#portfolio {
  height: 100%;
  width: 100%;
  background-color: #222831;
}

.my-work {
  width: 100%;
  height: 100%;
  top: 105%;
  position: absolute;
}

.my-work h1 {
  font-size: 200px;
  float: left;
  padding-left: 90px;
  font-weight: 900;
  position: relative;
  display: block;
  width: 80%;
  margin: auto;
  /* border: 1px red solid;  */
  color: #393e46;
}

.cards {
  display: flex;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 400px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  /* height: 200px; */
  /* border: 1px solid red; */
}

.card {
  top: 190%;
  height: 150px;
  position: relative;
  margin: 20px 150px;
  padding-bottom: 30px;
  background: #00adb5;
  color: #363636;
  text-decoration: none;
  -moz-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
  -webkit-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
  box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
  /* border: 1px solid red; */
}
@media (max-width: 700px) {
  .card {
    width: 100%;
  }
}
@media (min-width: 700px) {
  .card {
    max-width: 320px;
    margin-right: 20px;
    margin-bottom: 20px;
  }
  .card:nth-child(even) {
    margin-right: 0;
  }
}
@media (min-width: 980px) {
  .card:nth-child(even) {
    margin-right: 20px;
  }
  .card:nth-child(3n) {
    margin-right: 0;
  }
}
.card span {
  display: block;
  background: #00adb5;
}
.card .card-summary {
  padding: 18% 5% 3% 5%;
  /* border: 1px solid red; */
  color: #eee;
}

.card .card-title {
  /* background: rgba(157, 187, 63, 0.85); */
  padding: 3.5% 0 2.5% 0;
  color: white;
  font-family: "Roboto Condensed", sans-serif;
  text-transform: uppercase;
  position: absolute;
  width: 100%;
  /* border: 1px solid red; */
}
.card .card-title h3 {
  font-size: 1.2em;
  line-height: 1.2;
  padding: 0 5%;
  margin: 0;
  background: #00adb5;
}

.card:hover,
.card:focus {
  -moz-box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;
  -webkit-box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;
  box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;
}

#about {
  background-color: #222831;
  height: 100%;
  width: 100%;
}

.social {
  width: 85%;
  height: 80%;
  top: 190%;
  left: 130px;
  position: absolute;
}

.social h1 {
  font-size: 200px;
  float: right;
  margin-right: 0px;
  font-weight: 900;
  /* border: 1px red solid;  */
  color: #393e46;
}

.flex-center {
  width: 100%;
  background: #222831;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  /* border: 1px solid red; */
}

.icon-3d {
  padding: 50px;
  -webkit-animation: icon3d 200ms 10;
  animation: icon3d 200ms 10;
  color: #eee;
}

.icon-3d:hover {
  -webkit-animation: icon3d 200ms infinite;
  animation: icon3d 200ms infinite;
}

@keyframes icon3d {
  0% {
    text-shadow: 5px 4px #f44336, -5px -6px #2196f3;
  }
  25% {
    text-shadow: -5px -6px #f44336, 5px 4px #2196f3;
  }
  50% {
    text-shadow: 5px -4px #f44336, -8px 4px #2196f3;
  }
  75% {
    text-shadow: -8px -4px #f44336, -5px -4px #2196f3;
  }
  100% {
    text-shadow: -5px 0 #f44336, 5px -4px #2196f3;
  }
}

.down {
  font-family: "Roboto", sans-serif;
  text-align: center;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.footer {
  color: #666;
  font-size: 20px;
  /* display: block; */
  /* position: absolute; */
  bottom: 10px;
  position: absolute;
  width: 100%;
  left: 50%;
  top: 295%;
  /* border: 1px solid red; */

  bottom: auto;
  right: auto;
  transform: translateX(-50%) translateY(-50%);
  text-align: center;
}

.footer a {
  color: #00adb5;
  text-decoration: none;
}

.footer .fa {
  color: #e90606;
  margin: 0 3px;
  font-size: 20px;
  animation: pound 0.35s infinite alternate;
  -webkit-animation: pound 0.35s infinite alternate;
}

@-webkit-keyframes pound {
  to {
    transform: scale(1.1);
  }
}
@keyframes pound {
  to {
    transform: scale(1.1);
  }
}

/* Media Queries */

@media screen and (max-width: 992px) {
  body,
  html {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    font-family: "Nunito", sans-serif;
  }

  .menu {
    display: block;
    background-color: #222831;
    position: fixed;
    width: 100%;
  }

  #menu-center {
    width: 100%;
    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.12);
    /* margin: 0 auto; */
    /* float: center; */
    padding: 10px;
  }
  #menu-center ul {
    display: inline-flex;
    margin: 5px 5px;
    float: center;
  }
  #menu-center ul li {
    list-style: none;
    margin: 0px 10px;
    color: #eeeeee;
    cursor: pointer;
  }

  #menu-center ul li a {
    display: inline-block;
    text-decoration: none;
    margin: 0;
    padding: 0;
    color: #eeeeee;
    font-size: 13px;
  }
  #menu-center ul li a.active {
    color: #eee;
    text-decoration: none;
    border-bottom: 3px solid #00adb5;
  }

  #home {
    background-color: #222831;
    height: 100%;
    width: 100%;
    overflow: hidden;
    /* border: 1px solid red; */
  }

  .app-text {
    width: 80%;
    height: 70%;
    top: 20%;
    left: 35px;
    position: absolute;
    /* border: 1px red solid; */
  }

  .app-text #me {
    font-size: 28px;
    color: #eee;
    font-weight: normal;
    /* border: 1px solid red; */
    margin-bottom: 0px;
  }

  .app-text h1 {
    color: #00adb5;
    font-size: 36px;
    margin-top: 0px;
    /* border: 1px solid red; */
  }

  .app-text #young {
    color: #eee;
    margin-top: 15px;
    font-size: 16px;
    /* border: 1px red solid; */
  }

  .app-text #young span {
    color: #00adb5;
  }

  .app-picture {
    width: 100%;
    margin-top: 150px;
    position: absolute;
    left: 16%;
  }

  .app-picture img {
    padding: 1px 1%;
    width: 65%;
    /* border: 1px solid red; */
  }

  #portfolio {
    height: 100%;
    width: 100%;
    background-color: #222831;
  }

  .my-work {
    width: 100%;
    height: 100%;
    top: 105%;
    /* position: absolute; */
  }

  .my-work h1 {
    font-size: 90px;
    /* float: center; */
    text-align: center;
    padding: 0px;
    font-weight: 900;
    width: 100%;
    /* margin: auto; */
    /* border: 1px red solid; */
    color: #393e46;
  }

  .cards {
    display: flex;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
    margin-top: 150px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    /* height: 80%; */
    /* border: 1px solid red; */
  }

  .card {
    height: 150px;
    position: relative;
    margin: 10px 50px;
    padding-bottom: 20px;
    background: #00adb5;
    color: #363636;
    text-decoration: none;
    -moz-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
    -webkit-box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
    box-shadow: rgba(0, 0, 0, 0.19) 0 0 8px 0;
    /* border: 1px solid red; */
  }

  .card span {
    display: block;
    background: #00adb5;
  }
  .card .card-summary {
    padding: 18% 5% 3% 5%;
    /* border: 1px solid red; */
    color: #eee;
  }

  .card .card-title {
    /* background: rgba(157, 187, 63, 0.85); */
    padding: 3.5% 0 2.5% 0;
    color: white;
    font-family: "Roboto Condensed", sans-serif;
    text-transform: uppercase;
    position: absolute;
    width: 100%;
    /* border: 1px solid red; */
  }
  .card .card-title h3 {
    font-size: 1.2em;
    line-height: 1.2;
    padding: 0 5%;
    margin: 0;
    background: #00adb5;
  }

  .card:hover,
  .card:focus {
    -moz-box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;
    -webkit-box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;
    box-shadow: rgba(0, 0, 0, 0.45) 0px 0px 20px 0px;
  }

  #about {
    background-color: #222831;
    height: 100%;
    width: 100%;
  }

  .social {
    width: 85%;
    height: 80%;
    top: 200%;
    left: 30px;
    position: absolute;
    /* border: 1px solid red; */
  }

  .social h1 {
    font-size: 70px;
    /* float: center; */
    text-align: center;
    padding: 0px;
    font-weight: 900;
    width: 100%;
    /* margin: auto; */
    /* border: 1px red solid; */
    color: #393e46;
  }

  .flex-center {
    width: 100%;
    background: #222831;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    /* border: 1px solid red; */
  }
  .flex-center a {
    font-size: 10px;
    margin-top: 85px;
  }
  .icon-3d {
    padding: 15px;
    -webkit-animation: icon3d 200ms 10;
    animation: icon3d 200ms 10;
    color: #eee;
  }

  .icon-3d:hover {
    -webkit-animation: icon3d 200ms infinite;
    animation: icon3d 200ms infinite;
  }

  @keyframes icon3d {
    0% {
      text-shadow: 5px 4px #f44336, -5px -6px #2196f3;
    }
    25% {
      text-shadow: -5px -6px #f44336, 5px 4px #2196f3;
    }
    50% {
      text-shadow: 5px -4px #f44336, -8px 4px #2196f3;
    }
    75% {
      text-shadow: -8px -4px #f44336, -5px -4px #2196f3;
    }
    100% {
      text-shadow: -5px 0 #f44336, 5px -4px #2196f3;
    }
  }

  .down {
    font-family: "Roboto", sans-serif;
    text-align: center;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }

  .footer {
    color: #666;
    font-size: 12px;
    /* display: block; */
    /* position: absolute; */
    bottom: 10px;
    position: absolute;
    width: 100%;
    left: 50%;
    top: 295%;

    bottom: auto;
    right: auto;
    transform: translateX(-50%) translateY(-50%);
    text-align: center;
  }

  .footer a {
    color: #00adb5;
    text-decoration: none;
  }

  .footer .fa {
    color: #e90606;
    margin: 0 3px;
    font-size: 12px;
    animation: pound 0.35s infinite alternate;
    -webkit-animation: pound 0.35s infinite alternate;
  }

  @-webkit-keyframes pound {
    to {
      transform: scale(1.1);
    }
  }
  @keyframes pound {
    to {
      transform: scale(1.1);
    }
  }
}

